[package]
name = "client"
version = "0.1.0"
authors = ["John Gallagher <john.willis.gallagher@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.3.4"


[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version
