[package]
name = "common"
version = "0.1.0"
authors = ["John Gallagher <john.willis.gallagher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.85", features = ['derive'] }
serde_json = "1.0"

[target.'cfg(not(wasm))'.dependencies]
warp = "0.2.2"
