[package]
name = "server"
version = "0.1.0"
authors = ["John Gallagher <john.willis.gallagher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.2"
common = {path = "../common"}
jsonwebtoken = "7.1.0"
bcrypt = "0.6.2"